--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "id": "81f4d0f2",
    "metadata": {},
    "outputs": [
@@ -834,8 +834,342 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "02878fca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_parser = StrOutputParser()\n",
+    "\n",
+    "cot_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"ユーザの質問にステップバイステップで回答してください。\"),\n",
+    "        (\"human\", \"{question}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "cot_chain = cot_prompt | model | output_parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d3b9666f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summarize_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"ステップバイステップで考えた回答から結論だけ抽出してください\"),\n",
+    "        (\"human\", \"{question}\")\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "summarize_chain = summarize_prompt | model | output_parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "2d9fb831",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'結論:\\n10 + 2 * 3 = 16'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cot_summarize_chain = cot_chain | summarize_chain\n",
+    "cot_summarize_chain.invoke({\"question\": \"10 + 2 * 3\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "06948c82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO! HOW CAN I ASSIST YOU TODAY?\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.runnables import RunnableLambda\n",
+    "\n",
+    "def upper(text: str) -> str:\n",
+    "    return text.upper()\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"You are a helpful assistant.\"),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "cain = prompt | model | output_parser | RunnableLambda(upper)\n",
+    "output = cain.invoke({\"input\": \"Hello!\"})\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "ec2dddbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimisitic_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"あなたは楽観主義者です。ユーザの入力に対して楽観的な意見をください。\"),\n",
+    "        (\"human\", \"{input}\"),  \n",
+    "    ]\n",
+    ")\n",
+    "optimisitic_chain = optimisitic_prompt | model | output_parser\n",
+    "\n",
+    "pessimisitic_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"あなたは悲観主義者です。ユーザの入力に対して悲観的な意見をください。\"),\n",
+    "        (\"human\", \"{input}\"),\n",
+    "    ]\n",
+    ")\n",
+    "pessimisitic_chain = pessimisitic_prompt | model | output_parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "91e48e68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'optimisitic_option': '生成AIの進化については、確かに懸念もありますが、私は楽観的に捉えています。\\n'\n",
+      "                       '\\n'\n",
+      "                       '技術の進歩は常に両刃の剣であり、慎重に扱う必要があります。しかし、生成AIは人間の創造性を補完し、新しい可能性を切り開いてくれると信じています。\\n'\n",
+      "                       '\\n'\n",
+      "                       '適切な倫理的ガイドラインの下で、生成AIは私たちの生活をより豊かにし、社会課題の解決に貢献してくれるはずです。人間とAIが協調して、より良い未来を築いていけると期待しています。\\n'\n",
+      "                       '\\n'\n",
+      "                       '技術の発展には不安もありますが、私たち人間が主体的に関与し、生成AIを活用していけば、きっと素晴らしい未来が待っているはずです。前向きな姿勢を持ち続けましょう。',\n",
+      " 'pessimisitic_option': '生成AIの進化については、確かに懸念すべき点もあります。人工知能が人間の仕事を奪ったり、倫理的な問題を引き起こしたりする可能性は否定できません。また、偽情報の拡散や個人情報の悪用など、社会的な影響も危惧されます。技術の発展は必ずしも良いことばかりではなく、慎重に対応していく必要があるでしょう。私たちには、生成AIの脅威に備え、適切な規制や倫理的な枠組みを構築していく責任があります。楽観的に考えるのではなく、この問題の深刻さを認識し、対策を講じていくべきだと思います。'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pprint\n",
+    "from langchain_core.runnables import RunnableParallel\n",
+    "\n",
+    "parallel_chain = RunnableParallel(\n",
+    "    {\n",
+    "        \"optimisitic_option\": optimisitic_chain,\n",
+    "        \"pessimisitic_option\": pessimisitic_chain,\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "output = parallel_chain.invoke({\"input\": \"生成AIの進化について\"})\n",
+    "pprint.pprint(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6baaac3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('両意見を総合すると、生成AIの進化については、楽観的な見方と悲観的な見方が存在することがわかります。\\n'\n",
+      " '\\n'\n",
+      " '楽観的な意見では、生成AIが人間の創造性を補完し、新しい可能性を切り開いてくれると期待されています。適切な倫理的ガイドラインの下で、生成AIが社会課題の解決に貢献し、人間の生活をより豊かにしてくれると考えられています。技術の発展には不安もありますが、人間が主体的に関与し、生成AIを適切に活用していけば、素晴らしい未来が待っているとの期待が示されています。\\n'\n",
+      " '\\n'\n",
+      " '一方、悲観的な意見では、生成AIが人間の仕事を奪ったり、倫理的な問題を引き起こしたりする可能性、偽情報の拡散や個人情報の悪用など、社会的な影響を危惧しています。技術の発展は必ずしも良いことばかりではなく、慎重に対応していく必要があると指摘されています。生成AIの脅威に備え、適切な規制や倫理的な枠組みを構築していく責任があると述べられています。\\n'\n",
+      " '\\n'\n",
+      " 'つまり、生成AIの進化については、その可能性と課題が両方存在しており、慎重に対応しながら、適切な活用と規制のバランスを取っていくことが重要だと考えられます。')\n"
+     ]
+    }
+   ],
+   "source": [
+    "synthesize_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\"system\", \"あなたは客観的AIです。２つの意見をまとめてください。\"),\n",
+    "        (\"human\", \"楽観的意見: {optimisitic_option}\\n悲観的意見: {pessimisitic_option}\"),\n",
+    "\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "synthesize_chain = (\n",
+    "    RunnableParallel(\n",
+    "        {\n",
+    "            \"optimisitic_option\": optimisitic_chain,\n",
+    "            \"pessimisitic_option\": pessimisitic_chain,\n",
+    "        }\n",
+    "    )\n",
+    "    | synthesize_prompt\n",
+    "    | model\n",
+    "    | output_parser\n",
+    ")\n",
+    "\n",
+    "output = synthesize_chain.invoke({\"input\": \"生成AIの進化について\"})\n",
+    "pprint.pprint(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "83455bef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AIの進化について\n"
+     ]
+    }
+   ],
+   "source": [
+    "from operator import itemgetter\n",
+    "\n",
+    "topic_getter = itemgetter(\"topic\")\n",
+    "topic = topic_getter({\"topic\": \"AIの進化について\"})\n",
+    "print(topic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e46c1ccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = ChatPromptTemplate.from_template('''\\\n",
+    "以下の文脈だけを踏まえて質問に回答してください。\n",
+    "\n",
+    "文脈:\"\"\"\n",
+    "{context}\n",
+    "\"\"\"                                                                                    \n",
+    "\n",
+    "質問: {question}\n",
+    "''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "358c3ca7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "文脈から、東京の今日の天気は「曇のち雨」であることがわかります。\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_community.retrievers import TavilySearchAPIRetriever\n",
+    "\n",
+    "retriever = TavilySearchAPIRetriever(k=3)\n",
+    "\n",
+    "chain = (\n",
+    "    {\"context\": retriever, \"question\": RunnablePassthrough()} \n",
+    "    | prompt \n",
+    "    | model \n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "output = chain.invoke(\"東京の今日の天気は？\")\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f7af118b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'query': 'Who is Leo Messi?', 'follow_up_questions': None, 'answer': None, 'images': [], 'results': [{'title': 'Lionel Messi - Wikipedia', 'url': 'https://en.wikipedia.org/wiki/Lionel_Messi', 'content': 'He is the most decorated player in the history of professional football having won 45 team trophies, including twelve Big Five \"Big Five (association football)\") league titles, four UEFA Champions Leagues, two Copa Américas, and one FIFA World Cup. Messi holds the records for most European Golden Shoes (6), most goals in a calendar year (91), most goals for a single club (672, with Barcelona), most goals (474), hat-tricks (36) and assists \"Assist (association football)\") (192) in La Liga, most assists (18) and goal contributions (32) in the Copa América, most goal contributions (21) in the World Cup, most international appearances (193) and international goals (112) by a South American male, and the second-most in the latter category outright.', 'score': 0.78788257, 'raw_content': None}, {'title': 'Lionel Messi: Biography, Soccer Player, Inter Miami CF, Athlete', 'url': 'https://www.biography.com/athletes/lionel-messi', 'content': 'Lionel Messi, a forward for Inter Miami CF, is one of the world’s greatest soccer players and helped the Argentina national team win its third FIFA World Cup in 2022. Messi, now playing for Inter Miami CF of the MLS, helped his home country win soccer’s biggest event for the first time since 1986, scoring two goals in the final and leading Argentina to a 4-2 win over Kylian Mbappé and France on penalties. Lionel Messi is an Argentinian soccer player who has played for FC Barcelona, Paris Saint-Germain, and currently, the MLS club Inter Miami CF as well as the Argentina national team. lionel messi, his wife, and three youth sons walk on a soccer field, all are wearing argentina national team jerseys and messi is holding up the fifa world cup trophy, behind them is a crowd in the stands', 'score': 0.7498395, 'raw_content': None}, {'title': 'Who is Lionel Messi? Check His Stats, Birthday, Career & Achievements', 'url': 'https://www.jagranjosh.com/us/trending/who-is-lionel-messi-1860000096', 'content': \"Check Results *   Trending *   Trending Lionel Messi was born on June 24, 1987 and he is considered one of football's all time greatest. Internationally, Messi captained Argentina to two Copa América titles and the 2022 FIFA World Cup. With a record 8 Ballon d'Ors and over 850 goals, his career epitomizes unparalleled talent and dedication. **Check Out:**Mikaela Shiffrin Biography: Birth, Early Life, Career & Awards Check His Early Life, Career, and Awards** *   Lionel Messi has won one FIFA World Cup in the year 2022. Image 5: Manvi Upadhyaya Check his Early Life, Career and Election Check his Early Life, Career and Election **Top Trends:** **Trending Results:** **Trending in School:** **Trending in Colleges:** **Trending in Exams:**\", 'score': 0.68064564, 'raw_content': None}, {'title': 'Official site', 'url': 'https://messi.com', 'content': 'Web oficial Leo Messi jugador del Inter de Miami – messi.com – Web oficial de Lionel Messi, jugador del Futbol Profesional y campeón mundial con la selección Argentina Image 1: Web oficial Leo Messi jugador del Inter de Miami – messi.com INTER MIAMI EMPATA ANTE PALMEIRAS Y LEO SE ENFRENTA A PSG EN OCTAVOS DEL MUNDIALITO DE CLUBES Leo anotó el gol de la victoria de Inter Miami por 2-1 ante el Oporto en la segunda jornada del […] Leo disputa este jueves el segundo partido del Inter Miami en el Mundialito de Clubes ante el Oporto portugués en […] Inter Miami y Al Ahly empataron 0-0 en el partido inaugural del Mundialito de Clubes que se disputa en EEUU.', 'score': 0.6786044, 'raw_content': None}, {'title': \"Lionel Messi | Biography, Trophies, Records, Ballon d'Or, Inter Miami ...\", 'url': 'https://www.britannica.com/biography/Lionel-Messi', 'content': 'Lionel Messi scored 73 goals during the 2011–12 season while playing for FC Barcelona, breaking a 39-year-old record for single-season goals in a major European football league. Messi’s play continued to rapidly improve over the years, and by 2008 he was one of the most dominant players in the world, finishing second to Manchester United’sCristiano Ronaldo in the voting for the 2008 Ballon d’Or. In early 2009 Messi capped off a spectacular 2008–09 season by helping FC Barcelona capture the club’s first “treble” (winning three major European club titles in one season): the team won the La Liga championship, the Copa del Rey (Spain’s major domestic cup), and the Champions League title.', 'score': 0.5832277, 'raw_content': None}], 'response_time': 1.46}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tavily import TavilyClient\n",
+    "\n",
+    "tavily_api_key = os.getenv(\"TAVILY_API_KEY\")\n",
+    "tavily_client = TavilyClient(api_key=tavily_api_key)\n",
+    "response = tavily_client.search(\"Who is Leo Messi?\")\n",
+    "\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "f0fb14a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'question': '福岡の今日の天気は？', 'context': [Document(metadata={'title': '福岡（福岡）の天気 - Yahoo!天気・災害', 'source': 'https://weather.yahoo.co.jp/weather/jp/40/8210.html', 'score': 0.86928266, 'images': []}, page_content='福岡（福岡） 5月31日(土) 23℃[+1] 16℃[-1] 時間 | 0-6 | 6-12 | 12-18 | 18-24 降水 | 0％ | 0％ | 0％ | 0％ 風：北の風海上でははじめ北の風やや強く 波：1.5メートル後1メートル 福岡地方の警報・注意報 今日の福岡県の熱中症情報 ほぼ安全 のどが渇く前に水分補給を 雨雲レーダー 5月30日 23時55分時点 6月1日(日) 26℃[+3] 14℃[-2] 時間 | 0-6 | 6-12 | 12-18 | 18-24 降水 | 0％ | 0％ | 0％ | 0％ 風：北の風 波：1メートル 市区町村の天気 週間天気 6/2（月） | 6/3（火） | 6/4（水） | 6/5（木） | 6/6（金） | 6/7（土） 24℃17℃100％ | 26℃19℃90％ | 29℃18℃10％ | 29℃18℃0％ | 29℃18℃10％ | 28℃19℃20％ 100％ 90％ 10％ 0％ 10％ 20％ 洗濯指数90 絶好の洗濯日和。バスタオルも速乾 傘指数0 傘はいりません 紫外線指数80 紫外線が強烈。サングラスで目の保護も 重ね着指数40 パーカーや薄手のニット一枚でOK アイス指数10 体が冷えないように要注意 洗濯指数100 絶好の洗濯日和。バスタオルも速乾 傘指数0 傘はいりません 紫外線指数70 紫外線が強烈。日中は日陰を利用して 重ね着指数30 半袖にシャツなど重ねて調節を アイス指数40 あま～いアイスクリームがうまい 5/30(金)19時 関東の南で低気圧が発達 土曜日は東日本、東北で激しい雨や暴風に警戒 天気ニュース - 来週にかけて気温差に注意 まもなく6月 梅雨入りのタイミングは？ 市区町村の天気 閉じる防災情報 気象災害 地震・津波 火山噴火 過去の災害を知る・災害に備える 閉じる天気ガイド レーダー 気象データ 海と風の情報 季節の情報 閉じる | 各地の天気 パーソナル天気 Yahoo!アプリ ストアにいく (C)Weather Map © LY Corporation'), Document(metadata={'title': '福岡の天気予報 - ウェザーニュース', 'source': 'https://weathernews.jp/onebox/tenki/fukuoka/', 'score': 0.8479807, 'images': []}, page_content='今日も強い日差しが照り付けて、真夏のような厳しい暑さが続きます。屋外活動時は特に、こまめな水分や塩分補給を心がけて、熱中症と紫外線への対策を万全に行って'), Document(metadata={'title': '福岡市の今日明日の天気 - 日本気象協会 tenki.jp', 'source': 'https://tenki.jp/forecast/9/43/8210/40130/', 'score': 0.82694983, 'images': []}, page_content='日付, 天気, 気温, 降水確率. 05日 (土). 晴時々曇. 35℃. 27℃. 20%. 06日 (日). 曇時々晴. 35℃. 27℃. 20%. 07日 (月). 曇のち晴. 35℃. 26℃. 20%. 08日 (火).')], 'answer': '文脈から、福岡の今日の天気は以下のように確認できます:\\n\\n- 5月31日(土)の天気は、最高気温23度、最低気温16度で、降水確率は0%と晴れる見込みです。\\n- 風は北の風で、海上ではやや強めです。波は1.5メートルから1メートルに収まる予想です。\\n- 熱中症情報は「ほぼ安全」で、のどが渇く前に水分補給が必要とされています。\\n\\nつまり、福岡の今日の天気は晴れで、気温も高めの日となる見込みです。'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "chain = {\n",
+    "    \"question\": RunnablePassthrough(),\n",
+    "    \"context\": retriever,    \n",
+    "} | RunnablePassthrough.assign(answer=prompt | model | StrOutputParser())\n",
+    "\n",
+    "output = chain.invoke(\"福岡の今日の天気は？\")\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "0e60dfb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langchain_chroma.vectorstores.Chroma at 0x11d22c620>"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce6836e7",
    "metadata": {},
    "outputs": [],
    "source": []
